# OCR-Score

./: .dockerignore  .gitignore  DEVSHOP.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  ruff.toml
backend/: alembic.ini  batch_processor.py  conftest.py  database.py  devshop_client.py  devshop_server.py  ground_truth_manager.py  main.py  mock_engine.py  report_generator.py  run_orchestrator.py  settings.py  storage.py  test_auth.py  test_batch.py  test_codegen.py  test_engine_interface.py  test_ground_truth_api.py  test_integration.py  test_phase2_integration.py  test_reports.py  test_run_orchestrator.py  test_runs_api.py  test_scoring_service.py  test_storage.py  test_upload.py  test_websocket.py  websocket_manager.py
backend/alembic/: env.py  script.py.mako
backend/alignment/: __init__.py  aligner.py  clustering.py  comparator.py  test_aligner.py  test_clustering.py  test_comparator.py
backend/auth/: __init__.py  auth.py  models.py  schemas.py
backend/engine/: __init__.py  base.py  normalized_schema.py  registry.py  secret_store.py
backend/engines/: __init__.py  gcp_document_ai.py  image_preprocessing.py  tesseract.py  test_gcp_document_ai.py  test_tesseract.py  test_tesseract_hardening.py  test_textract.py  test_vlm.py  textract.py  vlm.py  vlm_deepseek.py  vlm_layout.py  vlm_normalize.py  vlm_olmocr.py
backend/evaluation/: __init__.py  _evaluators.py  bootstrap.py  consensus.py  handwriting.py  novel_metrics.py  (+13 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
(+67 files in other folders)
